--- a/reports/bill.jrxml
+++ b/reports/bill.jrxml
@@ -82,7 +82,7 @@
 	<field name="ToDate" class="java.sql.Date"/>
 	<field name="DatePaid" class="java.sql.Date"/>
 	<title>
-		<band height="281" splitType="Stretch">
+		<band height="271" splitType="Stretch">
 			<staticText>
 				<reportElement x="0" y="90" width="148" height="30" forecolor="#212121" uuid="57aed2b1-4f4e-40a3-a6ad-54dae8dd4c5a">
 					<property name="local_mesure_unitheight" value="pixel"/>
@@ -100,7 +100,7 @@
 					<property name="com.jaspersoft.studio.unit.x" value="px"/>
 				</reportElement>
 				<graphicElement>
-					<pen lineWidth="6.0" lineStyle="Solid"/>
+					<pen lineWidth="4.0" lineStyle="Solid"/>
 				</graphicElement>
 			</line>
 			<staticText>
@@ -265,7 +265,7 @@
 					<property name="com.jaspersoft.studio.unit.x" value="px"/>
 				</reportElement>
 				<graphicElement>
-					<pen lineWidth="6.0" lineStyle="Solid"/>
+					<pen lineWidth="4.0" lineStyle="Solid"/>
 				</graphicElement>
 			</line>
 			<staticText>
@@ -283,7 +283,7 @@
 		<band height="30">
 			<property name="com.jaspersoft.studio.unit.height" value="px"/>
 			<staticText>
-				<reportElement x="60" y="3" width="81" height="25" forecolor="#080707" uuid="ecadcc15-bdac-4527-88b0-05b0e55a164b"/>
+				<reportElement mode="Opaque" x="60" y="3" width="81" height="25" forecolor="#080707" backcolor="#FFE082" uuid="ecadcc15-bdac-4527-88b0-05b0e55a164b"/>
 				<box>
 					<pen lineWidth="0.5" lineColor="#000000"/>
 				</box>
@@ -293,7 +293,7 @@
 				<text><![CDATA[Previous Value]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="141" y="3" width="81" height="25" forecolor="#080707" uuid="fcdfd889-2247-415b-8bd4-6ebd78636d9a"/>
+				<reportElement mode="Opaque" x="141" y="3" width="81" height="25" forecolor="#080707" backcolor="#FFE082" uuid="fcdfd889-2247-415b-8bd4-6ebd78636d9a"/>
 				<box>
 					<pen lineWidth="0.5" lineColor="#000000"/>
 				</box>
@@ -303,7 +303,7 @@
 				<text><![CDATA[Current Value]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="222" y="3" width="107" height="25" forecolor="#080707" uuid="5ed9fd60-c751-414a-a4df-5785ca277620"/>
+				<reportElement mode="Opaque" x="222" y="3" width="107" height="25" forecolor="#080707" backcolor="#FFE082" uuid="5ed9fd60-c751-414a-a4df-5785ca277620"/>
 				<box>
 					<pen lineWidth="0.5" lineColor="#000000"/>
 				</box>
@@ -313,7 +313,7 @@
 				<text><![CDATA[Consume Value]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="329" y="3" width="81" height="25" forecolor="#080707" uuid="26f4ddec-ff62-462e-a506-46baef66cdcf"/>
+				<reportElement mode="Opaque" x="329" y="3" width="81" height="25" forecolor="#080707" backcolor="#FFE082" uuid="26f4ddec-ff62-462e-a506-46baef66cdcf"/>
 				<box>
 					<pen lineWidth="0.5" lineColor="#000000"/>
 				</box>
@@ -323,7 +323,7 @@
 				<text><![CDATA[Unit Price]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="410" y="3" width="206" height="25" forecolor="#080707" backcolor="#FFFFFF" uuid="ff0f2b4b-de8e-43bf-a521-8958b3465d9d"/>
+				<reportElement mode="Opaque" x="410" y="3" width="206" height="25" forecolor="#080707" backcolor="#FFE082" uuid="ff0f2b4b-de8e-43bf-a521-8958b3465d9d"/>
 				<box>
 					<pen lineWidth="0.5" lineColor="#000000"/>
 				</box>
@@ -335,7 +335,7 @@
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="292">
+		<band height="460">
 			<property name="com.jaspersoft.studio.unit.height" value="px"/>
 			<textField>
 				<reportElement x="60" y="-2" width="81" height="25" forecolor="#080707" uuid="5872d66c-0daa-4228-8e2e-847b4bcd884b">
@@ -689,15 +689,144 @@
 				<text><![CDATA[Amount:]]></text>
 			</staticText>
 			<textField pattern="#,##0.###;(#,##0.###-)" isBlankWhenNull="true">
-				<reportElement x="200" y="240" width="410" height="20" forecolor="#080707" uuid="ef3fa62f-f3f6-46f8-b1b3-106ea2aefe85"/>
+				<reportElement x="200" y="240" width="416" height="20" forecolor="#080707" uuid="ef3fa62f-f3f6-46f8-b1b3-106ea2aefe85"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle">
-					<font fontName="Times New Roman" size="9" isBold="true" isItalic="true"/>
+					<font fontName="Eras Bold ITC" size="10" isBold="true" isItalic="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{Total}]]></textFieldExpression>
 			</textField>
+			<line direction="BottomUp">
+				<reportElement mode="Opaque" x="0" y="280" width="680" height="1" forecolor="#FF9800" uuid="2b42130f-412d-4a28-bcf8-ae8a7daa8834">
+					<property name="local_mesure_unitheight" value="pixel"/>
+					<property name="com.jaspersoft.studio.unit.height" value="px"/>
+					<property name="com.jaspersoft.studio.unit.x" value="px"/>
+				</reportElement>
+				<graphicElement>
+					<pen lineWidth="3.0" lineStyle="Solid"/>
+				</graphicElement>
+			</line>
+			<staticText>
+				<reportElement mode="Transparent" x="78" y="330" width="102" height="40" forecolor="#FFA726" uuid="5690e180-f3ae-4bb0-8e43-7a3d3aa6f263">
+					<property name="local_mesure_unitheight" value="pixel"/>
+					<property name="com.jaspersoft.studio.unit.height" value="px"/>
+				</reportElement>
+				<box topPadding="0" leftPadding="0" bottomPadding="0" rightPadding="0">
+					<pen lineWidth="1.0" lineColor="#0F0F0F"/>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement verticalAlignment="Middle">
+					<font fontName="Cooper Black" size="20" isBold="true"/>
+				</textElement>
+				<text><![CDATA[EPay]]></text>
+			</staticText>
+			<image onErrorType="Icon">
+				<reportElement x="0" y="310" width="70" height="70" uuid="5de19742-146d-49ab-9a1c-c3fdfcbc7bcf"/>
+				<imageExpression><![CDATA["C:/Users/Hong Cuc/Documents/GitHub/SystemManageandPayElectricity/src/VIEWS/images/lg.jpg"]]></imageExpression>
+			</image>
+			<staticText>
+				<reportElement mode="Opaque" x="474" y="357" width="150" height="23" backcolor="#FFE082" uuid="2c60ff76-a723-452a-9e6b-dac9cf6fd6a6"/>
+				<box>
+					<pen lineWidth="1.0" lineStyle="Solid" lineColor="#FFE082"/>
+					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="Eras Bold ITC" size="12"/>
+				</textElement>
+				<text><![CDATA[Account Code]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="474" y="380" width="150" height="23" uuid="3a40b0ff-d901-41ac-b623-996dfb8e400c">
+					<property name="com.jaspersoft.studio.unit.height" value="px"/>
+				</reportElement>
+				<box>
+					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="Eras Bold ITC" size="12"/>
+					<paragraph lineSpacingSize="4.0"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$P{CUS_ID}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement mode="Opaque" x="474" y="403" width="150" height="23" backcolor="#FFE082" uuid="eacc567f-3b02-47bf-82aa-6094b56489bd"/>
+				<box>
+					<pen lineWidth="1.0" lineStyle="Solid" lineColor="#FFE082"/>
+					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="Eras Bold ITC" size="12"/>
+				</textElement>
+				<text><![CDATA[Total]]></text>
+			</staticText>
+			<textField pattern="#,##0.###;(#,##0.###-)">
+				<reportElement x="474" y="427" width="150" height="23" forecolor="#080707" uuid="96350db2-e6b7-4e65-aa34-be55782c4b0d">
+					<property name="com.jaspersoft.studio.unit.height" value="px"/>
+				</reportElement>
+				<box>
+					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#080707"/>
+					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#080707"/>
+					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#080707"/>
+					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#080707"/>
+				</box>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="Eras Bold ITC" size="12" isBold="false"/>
+				</textElement>
+				<textFieldExpression><![CDATA[((($F{ConsumeValue} >= 50 ? 50 : $F{ConsumeValue}) * 1678) + ($F{ConsumeValue} >= 100 ? 50*1734 : $F{ConsumeValue} <= 50 ? 0 : ($F{ConsumeValue} - 50)*1734) + ($F{ConsumeValue} >= 200 ? 100*2014 : $F{ConsumeValue} <= 100 ? 0 : ($F{ConsumeValue}-100)*2014) + ($F{ConsumeValue} >= 300 ? 100*2536 : $F{ConsumeValue} <= 200 ? 0 : ($F{ConsumeValue}-200)*2536) + ($F{ConsumeValue} >= 400 ? 100*2834 : $F{ConsumeValue}<=300 ?  0  : ($F{ConsumeValue} -300)*2834) + ($F{ConsumeValue} > 400 ? ($F{ConsumeValue}-400)*2927 : 0)) * 1.1]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="474" y="333" width="150" height="24" forecolor="#0F0F0E" uuid="fa989ab5-7012-4eae-889d-b52a4e6b353c">
+					<property name="com.jaspersoft.studio.unit.height" value="px"/>
+				</reportElement>
+				<box>
+					<pen lineWidth="1.0" lineStyle="Solid" lineColor="#0D0C0B"/>
+					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#0D0C0B"/>
+					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#0D0C0B"/>
+					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#0D0C0B"/>
+					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#0D0C0B"/>
+				</box>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font size="12" isBold="true"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$P{elec_bill_id}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement mode="Opaque" x="474" y="310" width="150" height="23" backcolor="#FFE082" uuid="f3a1cd8a-7b97-4186-b7a4-76fd30232f30"/>
+				<box>
+					<pen lineWidth="1.0" lineStyle="Solid" lineColor="#FFE082"/>
+					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="Eras Bold ITC" size="12"/>
+				</textElement>
+				<text><![CDATA[Invoice #]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="198" y="330" width="210" height="53" uuid="1e91a5bf-9fd5-4037-9679-6b1cdfb688fe"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font size="12" isBold="true"/>
+				</textElement>
+				<text><![CDATA[EPay Group - UIT VNU HCMC]]></text>
+			</staticText>
 		</band>
 	</detail>
 	<lastPageFooter>
-		<band height="111"/>
+		<band height="62">
+			<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.FreeLayout"/>
+		</band>
 	</lastPageFooter>
 </jasperReport>
